# iExplain

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.sh
agent-skills/iexplain-integration/: SKILL.md
config/: app.toml
data/bgl/: focus_nodes.txt  ground_truth.json  ground_truth_v2.json  incident_note.md  maintenance_window.json  noise_report.md
data/hdfs/: HDFS_anomaly_label_385_sampled_balanced.csv
docs/: architecture.md  evaluation.md  extending.md  intent-graphdb.md
experiments/: bgl_full.json  bgl_full_gpt4o.json  bgl_full_gpt5_mini.json  bgl_full_qwen3_4b.json  bgl_smoke.json  bgl_smoke_gpt4o.json  bgl_smoke_gpt5_mini.json  bgl_smoke_qwen3_4b.json  bgl_v2_challenge.json  bgl_v2_full.json  bgl_v2_model_matrix.json  bgl_v2_smoke.json  hdfs_full.json  hdfs_full_gpt4o.json  hdfs_full_gpt5_mini.json  hdfs_smoke.json  hdfs_smoke_gpt4o.json  hdfs_smoke_gpt5_mini.json
iexplain/: .gitignore  requirements.txt  setup.sh  test.txt
iexplain/config/: config.ini
iexplain/docs/: README.md
iexplain/src/: agents.py  agents.yaml  app.py  app2.py  config.py  explainer.py  genexplain.py  get_agents.py  get_tools.py  iexplain.py  iexplain2.py  main.py  mains.py  tools.py  utils.py  zep_test.py
iexplain/templates/: explanation.html  index.html
iexplain/tests/: test_explanation_flow.py  test_intent_parser.py
iexplain/work_dir/: tmp_code_5a4f4629badaf58e3de086453776a321.py  (+1 more)
src/: server.py
tests/: fakes.py  test_api.py  test_bgl_v2.py  test_catalog.py  test_eval.py  test_intent_graphdb.py  test_runtime.py
(+89 files in other folders)
