[project]
name = "iexplain"
version = "0.1.0"
description = "The iExplain explanation service focused on understandable runtime and evaluation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "httpx>=0.28.0",
    "litellm>=1.80.0",
    "pydantic>=2.11.0",
    "requests>=2.32.0",
    "uvicorn>=0.36.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
]

[project.scripts]
iexplain = "iexplain.cli:main"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
